2009-03-05  higepon  <higepon@users.sourceforge.jp>

        * configure.ac: Fixed message for GNU MP.

2009-03-04  higepon  <higepon@users.sourceforge.jp>

        * test/input-output-port.scm : Writing (file-options) tests

        * textual-input/output-port passes all tests.

2009-03-03  higepon  <higepon@users.sourceforge.jp>

        * Added textual-input/output-port not TESTed.

        * TranscodedTextualInputOutputPort.h : Added.

        * TranscodedTextualOutputPort.h : Added.

        * TranscodedTextualInputPort.h : Added.

2009-03-02  higepon  <higepon@users.sourceforge.jp>

        * FileBinaryInputOutputPort.cpp (FileBinaryInputOutputPort::readFromFile): Added.

        * BlockBufferedFileBinaryInputOutputPort.h : Added.

        * LineBufferedFileBinaryInputOutputPort.h : Added.

        * Makefile.am (test): Added test/input-output-port.scm to Makefile.asm

        * BufferedFileBinaryInputOutputPort.cpp (BufferedFileBinaryInputOutputPort): Passes all tests in input-output-port.scm

2009-02-27  higepon  <higepon@users.sourceforge.jp>

        * test/input-output-port.scm : Just passed simple tests.

2009-02-26  higepon  <higepon@users.sourceforge.jp>

        * ProcedureMacro.h : I found a dangerous reinterpret_cast<BinaryInputOutputPort*>. This doesn' work.

2009-02-25  kokosabu  <kokosabu@gmail.com>

        * Added : output-port-buffer-mode.

2009-02-25  higepon  <higepon@users.sourceforge.jp>

        * test/input-output-port.scm : Added.

2009-02-24  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryInputOutputPort.cpp (BufferedFileBinaryInputOutputPort::fillBuffer): Added some implementations.

2009-02-23  kokosabu  <kokosabu@gmail.com>

        * Added BlockBufferedBinaryOutputPort.h,
                LineBufferedBinaryOutputPort.h,
                StandardErrorOutputPort.h

2009-02-23  higepon  <higepon@users.sourceforge.jp>

        * BufferedFileBinaryInputOutputPort.cpp : Added (Not implemented yet).
